# model

./: .gitignore  conversion.py  docker-prepare.sh  dockerfile  prepare-pi.sh  prepare.sh  pyproject.toml  quantization.py  requirements.txt
.github/workflows/: docker.yml
models/: best.onnx  best.pt  best_float16.tflite  best_float32.tflite  yolov5nu_float16.tflite  yolov8x_float32.tflite
old/: __main__.py  detect-new.py  detect-old.py  detect.py  pi.py
serial-experiments/: serial-mux.py  serial-send.py  test-ec.py  test.py  virtual-serial.py
src/: __init__.py  __main__.py  benchmark.py  detect.py  modelinterface.py  new.py  plainyolo.py  yolo.py
src/cameras/: __init__.py  camerainterface.py  cvcamera.py  picamera.py
src/models/: Brett Added MavProxy  __init__.py  modelinterface.py  new.py  plainyolo.py  yolo.py
