[project]
name = "DroneObjDetectionGSU"
version = "0.1.0"
description = "Object Detection using Drone Imagery"

dependencies = ['opencv-python', 'numpy<2.0.0', 'ultralytics', 'tflite_runtime']

requires-python = ">=3.11"

[project.optional-dependencies]
pi = ['picamera2']
dev = ['mypy']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = true
check_untyped_defs = true
cache_dir = ".cache/mypy"
